--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,13 @@
 
 @custom-variant dark (&:is(.dark *));
 
+.form-input {
+    @apply py-6 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-app-blue/70;
+}
+.btn-primary {
+    @apply bg-app-blue text-white p-3 rounded-lg hover:bg-app-blue/90 transition cursor-pointer;
+}
+
 @theme {
     --font-sans:
         'Instrument Sans', ui-sans-serif, system-ui, sans-serif,
@@ -19,6 +26,8 @@
 
     --color-background: var(--background);
     --color-foreground: var(--foreground);
+
+    --color-app-blue: #0D6EFD;
 
     --color-card: var(--card);
     --color-card-foreground: var(--card-foreground);
